--- a/public/index.css
+++ b/public/index.css
@@ -1,20 +1,115 @@
+
+
+
 /* On all Pages */
 
 body{
     background-color:rgb(209, 209, 209);
+    /* margin: 0; */
 }
+
+.nav{
+    background-color: rgb(140,140,140);
+    display: flex;
+    flex: 1 1;
+    z-index: 2;
+    margin-bottom: 10px;
+    height: 100px;
+    justify-content: space-evenly;
+    min-width: 20%;
+}
+
+
+
+/* Dropdown Menus */
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin-top: 20px;
+    margin-left: 50px;
+    min-width: 20%;
+    
+  }
+
+  .dropdown > a{
+    color: rgba(80,0,0,0.6);
+  }
+  
+  .dropdown-content {
+    margin-top: -30px;
+    display: none;
+    position: relative;
+    background-color: rgb(140,140,140);
+    min-width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    font-family: 'Staatliches';
+    color: rgba(80,0,0,0.6);
+    text-align: left;
+ 
+  }
+  
+  .dropdown-content a {
+    
+    color: rgba(80,0,0,0.6);;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown:hover .dropdown-content {
+      display: block;
+}
+
+.dropdown:hover .headerbtns{
+    text-decoration: underline;
+}
+.dropdown-content:hover .sublink{
+    text-decoration: underline;
+}
+
+.navitem{
+margin: auto; 
+margin-top: 20px;
+font-family: 'Staatliches';
+color: rgba(80,0,0,0.6);
+font-size: 20px;
+text-align: center;
+
+}
+
+.navlink{
+display: flex;   
+flex: 1 1;
+justify-content: flex-end;
+}
+.content {
+    padding: 16px;
+  }
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+  }
+  
+  /* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+  .sticky + .content {
+    padding-top: 102px;
+  }
+
 
 #pagetitle{
     margin-top: 50px;
     text-align: center;
     color:#500000;
-    font-family: 'Staatliches', cursive;
+    font-family: 'Staatliches';
     font-style:bold;
     font-size: 100px;
 }
 
 .foot > p{
-    font-family: 'Staatliches', cursive;
+    font-family: 'Staatliches';
     font-style:bold;
     font-size: 18px;
 }
@@ -26,14 +121,18 @@ body{
 }
     /* Top Button Styling and Grid*/
 button{
-    background-color: rgba(80,0,0,0.6) !important;
+    background-color: rgba(80,0,0,0.6);
     width:18.5%;
     height: 100%;
-    color: rgb(192, 196, 192);
+    color: rgb(160, 160, 160);
     text-align: center;
     font-family: 'Staatliches', cursive;
     font-size: 25px;
     border-radius: 10px;
+}
+
+.headerbtns:hover{
+    color: rgb(80,0,0);
 }
 
 .headerbtns{
@@ -48,6 +147,56 @@ button{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 5px;
 }
+
+.spacer{
+    height: 20px;
+}
+
+/* Team Colors for Text */
+
+.aggies{
+    color:rgb(82,0,0)
+}
+
+.alabama{
+    color: rgb(158,27,50);
+}
+
+.arkansas{
+    color: rgb(153,34,53)
+}
+
+.baylor{
+    color: rgb(21, 71, 52);
+}
+
+.lsu{
+    color: rgb(70, 29, 124);
+}
+
+.nebraska{
+    color: rgb(227,25,55);
+}
+
+.tcu{
+    color: rgb(77, 25, 121);
+}
+
+.tech{
+    color: rgb(204, 0, 0);
+}
+
+.tulane{
+    color: rgb(0,103,71);
+}
+
+.ut{
+    color: rgb(255, 128, 0)
+}
+
+
+
+
 
     /*  */
 
@@ -69,7 +218,8 @@ button{
     color:#500000;
     font-family: 'Staatliches', cursive;
     font-style:bold;
-    font-size: 50px;
+    font-size: 65px;
+    margin-top: 20px;
 }
     /*  */
 
@@ -133,7 +283,6 @@ button{
     max-width: 70%;
 }
 .basictable1 > p{
-
     font-family: 'Staatliches', cursive;
     font-size: 22px;
 
@@ -143,6 +292,10 @@ button{
     font-size: 20px;
     margin-left:10px;
     font-family: 'Staatliches', cursive;
+}
+
+.basictable1{
+    margin-top: 10px;
 }
 
     /*  */
@@ -177,12 +330,12 @@ button{
     /* Pictures that accompany the timeline */
 
 figure{
-    display: inline-block;
+    /* display: inline-block; */
     margin: 20px;
     float:right;
 }
 figure img {
-    vertical-align: top;
+    /* vertical-align: top; */
     display: block;
     margin: auto;
     max-width:100%;
@@ -205,7 +358,6 @@ figure figcaption {
     padding: 25px;
     display: grid;
     grid-template-columns: 1fr 3px 1fr;
-    font-family: "Fira Sans", sans-serif;
     color: black;
   }
   
@@ -227,10 +379,11 @@ figure figcaption {
   .timeline__middle {
     position: relative;
     background: #ffffff;
+    z-index: 1;
   }
   
   .timeline__point {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -238,6 +391,7 @@ figure figcaption {
     height: 15px;
     background: white;
     border-radius: 50%;
+    z-index: 1;
   }
 
   .timeline__point--bottom {
@@ -253,10 +407,14 @@ figure figcaption {
     margin: 0;
     font-size: 1.15em;
     font-weight: bold;
+    font-family: Staatliches, cursive;
+    font-size: 35px;
   }
   
   .timeline__paragraph {
     line-height: 1.5;
+    font-family: Staatliches, cursive;
+    font-size: 20px;
   }
 
 
@@ -269,6 +427,69 @@ figure figcaption {
       display:grid;
       grid-template-rows: 600px 650px 250px 350px 1550px 530px 350px 400px 700px 950px 1200px 350px 350px 250px;
   }
+
+
+  /* Rivalries boxes */
+
+.rivalbox{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 20px;
+}
+
+.rivtitle{
+    display: inline-flex;
+    align-items: center;
+    font-size: 25px;
+    font-family: Staatliches, cursive;
+
+}
+.rivtitle > h3{
+    font-size: 45px;
+    margin-left: 10px;
+}
+
+.rivtitle > img {
+    margin-left: 20px;
+    max-height: 70px;
+    margin-top: 10px;
+
+}
+
+
+.rivitem{
+    /* display:block; */
+    border-radius: 10px;
+    background-color: rgba(80,0,0,0.4);
+    border-radius: 10px;
+    flex: 1 1;
+    margin-right: 10px;
+    font-size: 25px;
+    font-family: Staatliches, cursive;
+}
+
+.rivwrap{
+    display:grid;
+    grid-template-columns: 1.2fr 1fr;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+
+.rivgrid{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 3fr 4fr;
+}
+
+.rivbody{
+    font-size: 20px;
+}
+
+
   /*  */
 
 
@@ -281,6 +502,7 @@ figure figcaption {
     grid-template-columns: 150px auto;
     grid-template-rows: 50px 50px 50px 50px;
     background-color: rgb(168,168,168);
+    border-radius: 10px;
 }
 
     /*  */
@@ -334,6 +556,78 @@ figure figcaption {
 .item1 > p{
     font-family: 'Staatliches', cursive;
 }
+
+.ngamesbox{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex-basis: auto;
+    margin-bottom: 10px;
+
+    
+}
+
+.ngitemtext{
+    background-color: rgba(80,0,0,0.4);
+    border-radius: 10px;
+    flex: 1 1;
+    margin-right: 10px;
+    font-family:'Staatliches';
+
+}
+
+.ngitemimg{
+    border-radius: 10px;
+    flex: 1 1;
+    margin-right: 10px;
+
+}
+
+.ngitemimg > img{
+    max-width: 100%;
+
+}
+
+.boxscore{
+    display: grid;
+    margin-left: 0px;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns:2.2fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    /* border: 1px solid black; */
+}
+
+
+
+
+.bsItem{
+    border: 1px solid black;
+    text-align: center;
+    font-size: 20px;
+}
+
+.teamStats{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    /* Add more rows as you go  */
+    grid-template-rows: 1fr 1fr 1fr; 
+
+}
+
+.tsItem{
+margin-left: 10px;
+}
+
+.ngHeader{
+    margin-left: 10px;
+}
+
+.bgi{
+    margin-left: 10px;
+}
+
+
 
 /* ************** */
 
